Ui scrollbar added,Basic fixes

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,26 @@
     @apply w-fit bg-Textgray text-white h-[40px] flex justify-center items-center rounded border-t border-transparent px-12 py-[1px];
   }
   
+  @layer utilities {
+    /* Scrollbar width */
+    ::-webkit-scrollbar {
+      width: 6px;
+    }
+  
+    /* Scrollbar track */
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
+  
+    /* Scrollbar handle */
+    ::-webkit-scrollbar-thumb {
+      background: #ec7e7d;
+      border-radius: 2rem;
+    }
+  
+    /* Scrollbar handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+      background: #c24444;
+    }
+  }
+  
